--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,12 @@ html {
     
    .title {
        color: blue;
+       font-size: 10rem;
    }
 
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width:700px) {
     
     .title {
         color: green;
