--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
 
 /*alwasys work small before large. If you start large then small you will make it hard for yourself. You have to define the min-width inorder to tell the server when you active it.*/
 
-@media only screen and (min-width:400px) {
+@media only screen and (min-width:25em) {
     
    .title {
        color: blue;
@@ -28,10 +28,32 @@ html {
 
 }
 
-@media only screen and (min-width:700px) {
+@media only screen and (min-width:45em) {
     
     .title {
         color: green;
     }
 
 }
+
+/* you start small because when you go bigger the larger screen takes on the smaller elements. When you are done with the code, you will not have to do much because most of the work is done in the small screen.
+
+Do not use px becuase it changes the perspective in your head. You want to use em's so everybody can use it. You wnat to base it on the typography. to change a px to em you divid by 16. */
+
+.nav {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    background-color: #ccc;
+}
+
+.nav li {
+    border-top: 1px solid #666;
+}
+    
+.nav a {
+    display: block;
+    padding: 0.5em 0.7em;
+    text-decoration: none;
+}
+
