--- a/media-queries/css/nav.css
+++ b/media-queries/css/nav.css
@@ -27,3 +27,10 @@ html {
     padding: 0.5em 0.7em;
     text-decoration: none;
 }
+
+@media only screen and (min-width) {
+    
+    .nav li {
+        display: inline-block;
+    }
+}
