--- a/media-queries/css/nav.css
+++ b/media-queries/css/nav.css
@@ -28,7 +28,7 @@ html {
     text-decoration: none;
 }
 
-@media only screen and (min-width) {
+@media only screen and (min-width: 20em) {
     
     .nav li {
         display: inline-block;
