--- a/media-queries-starter-code/css/main.css
+++ b/media-queries-starter-code/css/main.css
@@ -68,3 +68,17 @@ figcaption {
 /* ====================================== */
 /*     DON'T TOUCH THE CSS ABOVE HERE     */
 /* ====================================== */
+
+@media only screen and (min-width: 30em) {
+    
+    .dino-secondary {
+        float: left;
+    }
+
+    .dino-secondary {
+        float: right;
+}
+
+@media only screen and (min-width: 50em) {
+
+}
