--- a/media-queries-starter-code/css/main.css
+++ b/media-queries-starter-code/css/main.css
@@ -77,7 +77,12 @@ figcaption {
 
     .dino-secondary {
         float: right;
-}
+    }
+        
+    figcaption {
+      position: absolute;
+        
+    }
 
 @media only screen and (min-width: 50em) {
 
